<resources>
    <string name="app_name">AppMo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Welcome_to_AppMo">Welcome to AppMo</string>
    <string name="Name">Nwakusor Onyeka Mitchell</string>
    <string name="UserName">Nwakusor Mitchell</string>
    <string name="Email">udemenwak@gmail.com</string>
    <string name="tracks">Mobile, Design, Front End, Back end, Coding</string>
</resources>
